manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: add-task-naina
spec:
  replicas: 2
  selector:
    matchLabels:
      app: add-task
  template:
    metadata:
      labels:
        app: add-task
    spec:
      containers:
      - name: add-task
        image: alok1408/addtask:cp
        ports:
        - containerPort: 8000
