manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: add-task-ingress
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
spec:
  rules:
  - host: add-task.cptiwari.cloud
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: add-task
            port:
              number: 80
